---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/join-lines/test_joining_tokens_2.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/join-lines/test_joining_tokens_2.c"
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (declaration printf~1 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~2 `fn() -> int`
      (compound-statement
         (expression
            (call (name printf~1 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%x\n")
               u8'a'))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "\x61")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello world")))
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "hello world"))))))

----- stderr -----
